...
    }

    Scaffold(
        modifier = modifier.fillMaxSize(),
        topBar = {
            TopAppBar(
                title = { Text("Conversations") },
                navigationIcon = {
                    IconButton(onClick = onBack) {
                        Icon(
                            imageVector = Icons.Outlined.ArrowBack,
                            contentDescription = "Navigate up"
                        )
...
        floatingActionButton = {
            FloatingActionButton(
                onClick = onCreateConversation
            ) {
                Icon(
                    imageVector = Icons.Outlined.Add,
                    contentDescription = "New conversation"
                )
            }
        },
        snackbarHost = {
            SnackbarHost(hostState = snackbarHostState) { data ->
                Snackbar(snackbarData = data)
...
